# YAUKernel

./: CMakeLists.txt  Makefile  README.md  bochsrc  grub.cfg  linker.ld
src/: CMakeLists.txt  Makefile  kmain.c
src/boot/: CMakeLists.txt  Makefile  boot.asm  multiboot.c
src/driver/: CMakeLists.txt  ide.c  keyboard.c  pic.c  video.c
src/i386/: CMakeLists.txt  gdt.c
src/includes/boot/: multiboot.h
src/includes/driver/: ide.h  keyboard.h  pic.h  video.h
src/includes/i386/: gdt.h
src/includes/libc/: list.h  mem.h  string.h
src/includes/sys/: asm.h  gdt.h  idt.h  interrupts.h  kmalloc.h  memory.h  pagemem.h  pic.h  scheduler.h  syscall.h  task.h  tss.h  types.h
src/libc/: CMakeLists.txt  mem.c  string.c
src/sys/: CMakeLists.txt  gdt.c  idt.c  interrupts.asm  interrupts.c  kmalloc.c  memory.c  pagemem.c  pic.c  scheduler.c  syscall.c  task.c  tss.c
